<resources>
    <string name="app_name">Dice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dice_1d4">Dice 1d4</string>
    <string name="dice_1d6">Dice 1d6</string>
    <string name="dice_1d8">Dice 1d8</string>
    <string name="dice_1d10">Dice 1d10</string>
    <string name="dice_1d12">Dice 1d12</string>
    <string name="dice_1d20">Dice 1d20</string>
    <string name="dice_1d100">Dice 1d100</string>
    <string name="show_me_your_lucky">Show me Your Lucky</string>
    <string name="masters_dice">Masters Dice</string>
    <string name="get_luck">Get Luck!</string>
    <string name="shake_to_drop_this_dice">Shake to drop this Dice</string>
</resources>
